--- a/.jshintrc
+++ b/.jshintrc
@@ -63,5 +63,5 @@
     "onevar"        : false,
     "passfail"      : false,
     "white"         : false,
-    "predef"        : ["angular", "describe", "beforeEach", "it", "expect", "inject", "module"]
+    "predef"        : ["angular", "describe", "beforeEach", "it", "expect", "inject", "module", "_bind"]
 }
