--- a/.jshintrc
+++ b/.jshintrc
@@ -18,7 +18,7 @@
     "unused"        : true,
     "strict"        : false,
     "trailing"      : true,
-    "maxparams"     : 3,
+    "maxparams"     : 4,
     "maxdepth"      : 3,
     "maxstatements" : false,
     "maxcomplexity" : false,
@@ -63,5 +63,5 @@
     "onevar"        : false,
     "passfail"      : false,
     "white"         : false,
-    "predef"        : ["angular", "describe", "beforeEach", "it", "expect", "inject", "module", "_bind"]
+    "predef"        : ["angular", "describe", "beforeEach", "it", "expect", "inject", "module", "require", "_bind"]
 }
