--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "load-grunt-tasks": "~0.2.1",
     "grunt-bump": "0.0.13",
     "grunt-git": "~0.2.4",
-    "grunt-angular-templates": "~0.5.1"
+    "grunt-angular-templates": "~0.5.1",
+    "glob": "~3.2.8"
   }
 }
