--- a/.jshintrc
+++ b/.jshintrc
@@ -65,6 +65,8 @@
     "white"         : false,
     "predef"        : [
         "angular",
+        "jasmine",
+        "jQuery",
         "describe",
         "beforeEach",
         "afterEach",
