--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "grunt-bump": "0.0.13",
     "grunt-git": "~0.2.4",
     "grunt-angular-templates": "~0.5.1",
-    "glob": "~3.2.8"
+    "glob": "~3.2.8",
+    "grunt-protractor-runner": "~0.2.1",
+    "protractor": "~0.16.1"
   }
 }
