--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
   "devDependencies": {
     "angular": "~1.2.8",
     "angular-mocks": "~1.2.9",
-    "jquery": "~2.0.3"
+    "jquery": "~2.0.3",
+    "less": "~1.6.1"
   },
   "ignore": [
     "**/.*",
