--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "grunt-angular-templates": "~0.5.1",
     "glob": "~3.2.8",
     "grunt-protractor-runner": "~0.2.1",
-    "protractor": "~0.16.1"
+    "protractor": "~0.16.1",
+    "grunt-contrib-less": "~0.9.0"
   }
 }
