add jd prefix for modules and directive.

--- a/.jshintrc
+++ b/.jshintrc
@@ -68,9 +68,11 @@
         "jasmine",
         "jQuery",
         "describe",
+        "ddescribe",
         "beforeEach",
         "afterEach",
         "it",
+        "iit",
         "expect",
         "runs",
         "waits",
