--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,10 @@ language: node_js
 node_js:
   - "0.11"
   - "0.10"
+
+before_install:
+  - npm install -g bower
+
+install:
+  - npm install
+  - bower install
