--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
   - "0.10"
 
 before_install:
-  - npm install -g bower grunt
+  - npm install -g bower grunt-cli
 
 install:
   - npm install
