--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,7 @@ before_install:
 install:
   - npm install
   - bower install
+
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
