--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ install:
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - ./node_modules/protractor/bin/webdriver-manager update --standalone
-  - node scripts/web-server.js &
-  - ./node_modules/protractor/bin/webdriver-manager start &
+  # - ./node_modules/protractor/bin/webdriver-manager update --standalone
+  # - node scripts/web-server.js &
+  # - ./node_modules/protractor/bin/webdriver-manager start &
 
 script:
   - grunt test:travis
