Move Test-Setup into SpecHelper.js and apply minor improvements.

--- a/.jshintrc
+++ b/.jshintrc
@@ -80,6 +80,7 @@
         "module",
         "require",
         "fontselectModule",
-        "_bind"
+        "_bind",
+        "_createKey"
     ]
 }
