Moar end to end tests and better pagination.

--- a/.jshintrc
+++ b/.jshintrc
@@ -69,10 +69,12 @@
         "jQuery",
         "describe",
         "ddescribe",
+        "xdescribe",
         "beforeEach",
         "afterEach",
         "it",
         "iit",
+        "xit",
         "expect",
         "runs",
         "waits",
