Improve Demo, E2E testing and Dist workflows.

--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,11 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tasks",
+    "demo",
+    "src",
+    "Gruntfile.js",
+    "package.json"
   ],
   "dependencies": {
     "angular": "~1.2.8"
