Improve initiation with state and add usage object on fontsService.

--- a/.jshintrc
+++ b/.jshintrc
@@ -81,6 +81,7 @@
         "spyOn",
         "runs",
         "waits",
+        "waitsFor",
         "inject",
         "module",
         "require",
