--- a/.jshintrc
+++ b/.jshintrc
@@ -89,6 +89,7 @@
         "_bind",
         "_createKey",
         "_objLength",
-        "_createName"
+        "_createName",
+        "_isDescendant"
     ]
 }
