--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "test": "grunt test",
-    "install": "./node_modules/bower/bin/bower install; ln -s ./node_modules/grunt-cli/bin/grunt ./grunt; ./node_modules/protractor/bin/webdriver-manager update; ./grunt build"
+    "install": "./node_modules/bower/bin/bower install && ./node_modules/protractor/bin/webdriver-manager update && ./node_modules/grunt-cli/bin/grunt build"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "bower": "~1.2.8",
+    "bower": "~1.3.8",
     "grunt": "~0.4.2",
     "grunt-cli": "~0.1.13",
     "grunt-contrib-uglify": "~0.2.7",
