--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "~1.3.8",
+    "coffee-script": "~1.7.1",
     "grunt": "~0.4.5",
     "grunt-cli": "~0.1.13",
     "grunt-contrib-uglify": "~0.5.1",
@@ -33,6 +34,7 @@
     "karma-jasmine": "~0.2.2",
     "karma-coffee-preprocessor": "~0.2.1",
     "requirejs": "~2.1.14",
+    "karma-coffee-preprocessor": "~0.2.1",
     "karma-requirejs": "~0.2.2",
     "karma-phantomjs-launcher": "~0.1.4",
     "karma": "~0.12.19",
@@ -42,11 +44,11 @@
     "load-grunt-tasks": "~0.6.0",
     "grunt-bump": "0.0.15",
     "grunt-angular-templates": "~0.5.7",
-    "glob": "~4.0.5",
+    "glob": "~3.2.9",
     "grunt-protractor-runner": "~1.1.0",
     "protractor": "~1.0.0",
     "grunt-contrib-less": "~0.11.4",
-    "grunt-shell": "~0.7.0",
+    "grunt-shell-spawn": "~0.3.0",
     "grunt-http-server": "0.0.5"
   }
 }
