--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
   global:
   - PROTRACTOR_BROWSERS=firefox
   - KARMA_BROWSERS=Firefox,PhantomJS
-  - JD_FONTSELECT_GOOGLE_FONTS_API_KEY="AIzaSyDj4SNEhYFlyj3574soB5IR1GkA9SzteLg"
+  - secure: "NwL+WhB/vBbs3eTXrtp+18apGigtrVZEnP03+9cJeBHFfY27Rmy2J4VT6TilnYDYBqOiE+BDIszOFJo/cSx0buXd4ca5jlPcojNvipYiOXEp0RP+jLBUBXYPo7ocgwWI7xk2mIbdqgS1EXr0Fyr9nmFArriYThvSiXRsLN5Zs6s="
 install:
 - npm install
 before_script:
