--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 bower_components/
 node_modules/
 npm-debug.log
-src/partials/all.js
+test/e2e/env/all-partials.js
 tmp.apikeys.js
 .DS_Store
 grunt
