--- a/package.json
+++ b/package.json
@@ -21,33 +21,33 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "bower": "~1.3.8",
-    "coffee-script": "~1.7.1",
+    "bower": "~1.3.12",
+    "coffee-script": "^1.8.0",
+    "glob": "~4.0.6",
     "grunt": "~0.4.5",
+    "grunt-angular-templates": "~0.5.7",
+    "grunt-bump": "0.0.15",
     "grunt-cli": "~0.1.13",
-    "grunt-contrib-uglify": "~0.5.1",
+    "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-jshint": "~0.10.0",
-    "karma-script-launcher": "~0.1.0",
+    "grunt-contrib-less": "~0.11.4",
+    "grunt-contrib-uglify": "~0.6.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-http-server": "1.0.0",
+    "grunt-karma": "~0.9.0",
+    "grunt-protractor-runner": "~1.1.4",
+    "grunt-shell-spawn": "~0.3.0",
+    "karma": "~0.12.23",
     "karma-chrome-launcher": "~0.1.4",
+    "karma-coffee-preprocessor": "~0.2.1",
     "karma-firefox-launcher": "~0.1.3",
     "karma-html2js-preprocessor": "~0.1.0",
     "karma-jasmine": "~0.2.2",
-    "karma-coffee-preprocessor": "~0.2.1",
-    "requirejs": "~2.1.14",
-    "karma-requirejs": "~0.2.2",
     "karma-phantomjs-launcher": "~0.1.4",
-    "karma": "~0.12.21",
-    "grunt-karma": "~0.8.3",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-concat": "~0.5.0",
+    "karma-requirejs": "~0.2.2",
+    "karma-script-launcher": "~0.1.0",
     "load-grunt-tasks": "~0.6.0",
-    "grunt-bump": "0.0.15",
-    "grunt-angular-templates": "~0.5.7",
-    "glob": "~3.2.9",
-    "grunt-protractor-runner": "~1.1.0",
-    "protractor": "~1.0.0",
-    "grunt-contrib-less": "~0.11.4",
-    "grunt-shell-spawn": "~0.3.0",
-    "grunt-http-server": "0.0.5"
+    "protractor": "~1.3.1",
+    "requirejs": "~2.1.15"
   }
 }
