update and lock dev dependencies

--- a/bower.json
+++ b/bower.json
@@ -16,10 +16,10 @@
   "devDependencies": {
     "jasmine-moar-matchers": "https://gist.github.com/8549144a6969317efa11.git",
     "angular-mocks": "~1.2.25",
-    "webfontloader": "~1.5.5",
-    "lesshat": "~3.0.2",
-    "jquery": "~2.1.1",
-    "less": "~1.7.4"
+    "webfontloader": "1.5.6",
+    "lesshat": "3.0.2",
+    "jquery": "2.1.1",
+    "less": "1.7.5"
   },
   "ignore": [
     "**/.*",
