chore(reporters): make protractor reporter configurable by grunt option and use it for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,6 @@ env:
   global:
   - PROTRACTOR_BROWSERS=firefox
   - KARMA_BROWSERS=Firefox,PhantomJS
-  - PROTRACTOR_REPORTER=spec
-  - KARMA_REPORTERS=spec
   - secure: "NwL+WhB/vBbs3eTXrtp+18apGigtrVZEnP03+9cJeBHFfY27Rmy2J4VT6TilnYDYBqOiE+BDIszOFJo/cSx0buXd4ca5jlPcojNvipYiOXEp0RP+jLBUBXYPo7ocgwWI7xk2mIbdqgS1EXr0Fyr9nmFArriYThvSiXRsLN5Zs6s="
 
 install:
@@ -19,7 +17,7 @@ before_script:
   - sh -e /etc/init.d/xvfb start
 
 script:
-  - grunt test
+  - grunt test --reporter=spec
 
 after_success:
   - grunt coveralls
