--- a/package.json
+++ b/package.json
@@ -56,5 +56,16 @@
     "load-grunt-tasks": "~1.0.0",
     "mkdirp": "^0.5.0",
     "protractor": "~1.4.0"
-  }
+  },
+  "contributors": [
+    "HerrBertling <markus277@gmail.com>",
+    "ldiercks <lasse@jimdo.com>"
+  ],
+  "maintainers": [
+    "Hannes Diercks <hannes.diercks@jimdo.com>",
+    "Lasse Diercks <lasse@jimdo.com>",
+    "Joscha Feth <joscha@feth.com>",
+    "Ole Michaelis <Ole.Michaelis@googlemail.com>",
+    "Hauke Stange <hauke@jimdo.com>"
+  ]
 }
