--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
   - sh -e /etc/init.d/xvfb start
 
 script:
-  - grunt test
+  - grunt test --reporter=spec
 
 after_success:
   - grunt coveralls
