--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,7 @@
   "license": "MIT",
   "devDependencies": {
     "jasmine-moar-matchers": "~0.0.2",
-    "angular-mocks": "^1.2.25",
+    "angular-mocks": "^1.2.25 <1.3.6",
     "webfontloader": "1.5.8",
     "lesshat": "3.0.2",
     "jquery": "2.1.1"
@@ -37,6 +37,6 @@
     "package.json"
   ],
   "dependencies": {
-    "angular": "^1.2.25"
+    "angular": "^1.2.25 <1.3.6"
   }
 }
