--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "grunt-parallel": "^0.3.1",
     "grunt-protractor-runner": "~1.1.4",
     "grunt-shell-spawn": "~0.3.0",
+    "grunt-protractor-webdriver": "^0.2.0",
     "jasmine-spec-reporter": "^1.1.0",
     "karma-chrome-launcher": "~0.1.6",
     "karma-coffee-preprocessor": "~0.2.1",
