--- a/bower.json
+++ b/bower.json
@@ -7,8 +7,8 @@
     "Joscha Feth <joscha@feth.com>",
     "Ole Michaelis <Ole.Michaelis@googlemail.com>",
     "Hauke Stange <hauke@jimdo.com>",
-    "HerrBertling <markus277@gmail.com>",
-    "Sebastian Eichner <mail@sebastian-eichner.de>"
+    "Sebastian Eichner <mail@sebastian-eichner.de>",
+    "HerrBertling <markus277@gmail.com>"
   ],
   "description": "A fontselect directive for AngularJS",
   "main": "dist/angular-fontselect.js",
