--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
   - sh -e /etc/init.d/xvfb start
 
 script:
-  - grunt test --reporter=spec
+  - peons test --reporter=spec
 
 after_success:
-  - grunt coveralls
+  - peons coveralls
