--- a/bower.json
+++ b/bower.json
@@ -20,8 +20,6 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "jasmine-moar-matchers": "~0.0.2",
-    "angular-mocks": "^1.2.25 <1.3.6",
     "webfontloader": "1.5.8",
     "lesshat": "3.0.2",
     "jquery": "2.1.1"
@@ -31,10 +29,9 @@
     "node_modules",
     "bower_components",
     "test",
-    "tasks",
     "demo",
     "src",
-    "Gruntfile.js",
+    "peonsfile.js",
     "package.json"
   ],
   "dependencies": {
