--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "contributors": [
     "HerrBertling <markus277@gmail.com>"
   ],
-  "main": "Gruntfile.js",
   "keywords": [
     "fonts",
     "directive",
@@ -23,8 +22,8 @@
     "webfonts"
   ],
   "scripts": {
-    "test": "grunt test",
-    "postinstall": "bower install && ln -sf ./node_modules/grunt-cli/bin/grunt ./grunt && ./node_modules/protractor/bin/webdriver-manager update && ./grunt build"
+    "test": "peons test",
+    "postinstall": "bower install && peons build"
   },
   "repository": {
     "type": "git",
@@ -32,41 +31,8 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "bower": "~1.3.12",
-    "coffee-script": "^1.8.0",
-    "connect-less": "^0.3.1",
-    "glob": "~4.3.1",
-    "grunt": "~0.4.5",
-    "grunt-angular-templates": "~0.5.7",
-    "grunt-bump": "0.0.16",
-    "grunt-cli": "~0.1.13",
-    "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-connect": "^0.9.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-less": "~0.12.0",
-    "grunt-contrib-uglify": "~0.6.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-coveralls": "^1.0.0",
-    "grunt-karma": "~0.9.0",
-    "grunt-ng-annotate": "^0.8.0",
-    "grunt-npm": "https://github.com/Xiphe/grunt-npm/tarball/98187270151e53d45214d778de394a557e81958c",
-    "grunt-parallel": "^0.3.1",
-    "grunt-protractor-runner": "~1.1.4",
-    "grunt-shell": "~1.1.1",
-    "grunt-protractor-webdriver": "^0.2.0",
-    "jasmine-spec-reporter": "^1.1.0",
-    "karma-chrome-launcher": "~0.1.7",
-    "karma-coffee-preprocessor": "~0.2.1",
-    "karma-coverage": "^0.2.7",
-    "karma-firefox-launcher": "~0.1.3",
-    "karma-html2js-preprocessor": "~0.1.0",
-    "karma-jasmine": "~0.3.2",
-    "karma-phantomjs-launcher": "~0.1.4",
-    "karma-requirejs": "~0.2.2",
-    "karma-script-launcher": "~0.1.0",
-    "karma-spec-reporter": "0.0.13",
-    "load-grunt-tasks": "~1.0.0",
-    "mkdirp": "^0.5.0",
-    "protractor": "~1.4.0"
+    "bower": "^1.3.12",
+    "peons-angular": "0.0.6",
+    "peons-cli": "0.0.5"
   }
 }
