--- a/package.json
+++ b/package.json
@@ -7,14 +7,9 @@
   "maintainers": [
     "Hannes Diercks <hannes.diercks@jimdo.com>",
     "Lasse Diercks <lasse@jimdo.com>",
-    "Joscha Feth <joscha@feth.com>",
-    "Ole Michaelis <Ole.Michaelis@googlemail.com>",
-    "Hauke Stange <hauke@jimdo.com>",
-    "Sebastian Eichner <mail@sebastian-eichner.de>"
+    "Joscha Feth <joscha@feth.com>"
   ],
   "contributors": [
-    "Lasse Diercks <lasse@jimdo.com>",
-    "Joscha Feth <joscha@feth.com>",
     "Ole Michaelis <Ole.Michaelis@googlemail.com>",
     "Hauke Stange <hauke@jimdo.com>",
     "Sebastian Eichner <mail@sebastian-eichner.de>",
