--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "Sebastian Eichner <mail@sebastian-eichner.de>"
   ],
   "contributors": [
+    "Lasse Diercks <lasse@jimdo.com>",
+    "Joscha Feth <joscha@feth.com>",
+    "Ole Michaelis <Ole.Michaelis@googlemail.com>",
+    "Hauke Stange <hauke@jimdo.com>",
+    "Sebastian Eichner <mail@sebastian-eichner.de>",
     "HerrBertling <markus277@gmail.com>"
   ],
   "keywords": [
