--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "webfonts"
   ],
   "scripts": {
-    "test": "peons test",
-    "postinstall": "bower install && peons build"
+    "test": "grunt test",
+    "postinstall": "bower install && grunt build"
   },
   "repository": {
     "type": "git",
@@ -32,7 +32,8 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.3.12",
-    "peons-angular": "0.0.7",
-    "peons-cli": "0.0.5"
+    "grunt": "^0.4.5",
+    "grunt-angular-toolbox": "0.0.3",
+    "grunt-cli": "^0.1.13"
   }
 }
