--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "Joscha Feth <joscha@feth.com>"
   ],
   "contributors": [
+    "Lasse Diercks <lasse@jimdo.com>",
+    "Joscha Feth <joscha@feth.com>",
     "Ole Michaelis <Ole.Michaelis@googlemail.com>",
     "Hauke Stange <hauke@jimdo.com>",
     "Sebastian Eichner <mail@sebastian-eichner.de>",
