update bower authors

--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,9 @@
     "Lasse Diercks <lasse@jimdo.com>",
     "Joscha Feth <joscha@feth.com>",
     "Ole Michaelis <Ole.Michaelis@googlemail.com>",
-    "Hauke Stange <hauke@jimdo.com>",
     "Sebastian Eichner <mail@sebastian-eichner.de>",
+    "Hauke Stange <hauke@jimdo.com>",
+    "Christian Meyer <christian.meyer@jimdo.com>",
     "HerrBertling <markus277@gmail.com>"
   ],
   "description": "A fontselect directive for AngularJS",
