--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "Joscha Feth <joscha@feth.com>"
   ],
   "contributors": [
+    "Christian Meyer <christian.meyer@jimdo.com>",
     "Ole Michaelis <Ole.Michaelis@googlemail.com>",
     "Hauke Stange <hauke@jimdo.com>",
     "Sebastian Eichner <mail@sebastian-eichner.de>",
