chore: update npm packages and angular adjust api changes

--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,9 @@
   "devDependencies": {
     "webfontloader": "1.5.8",
     "lesshat": "3.0.2",
-    "jquery": "2.1.1"
+    "jquery": "2.1.1",
+    "angular-mocks": "^1.2.25 <= 1.4.1",
+    "jasmine-moar-matchers": "~0.0.3"
   },
   "ignore": [
     "**/.*",
@@ -40,6 +42,6 @@
     "package.json"
   ],
   "dependencies": {
-    "angular": "^1.2.25 <= 1.4.0"
+    "angular": "^1.2.25 <= 1.4.1"
   }
 }
