--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "bower": "^1.3.12",
+    "bower": "^1.4.1",
     "grunt": "^0.4.5",
-    "grunt-angular-toolbox": "0.0.17",
+    "grunt-angular-toolbox": "^1.1.4",
     "grunt-cli": "^0.1.13"
   }
 }
