update bower authors

--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "Ole Michaelis <Ole.Michaelis@googlemail.com>",
     "Hauke Stange <hauke@jimdo.com>",
     "Sebastian Eichner <mail@sebastian-eichner.de>",
+    "Xiphe <hannes.diercks@jimdo.com>",
     "HerrBertling <markus277@gmail.com>"
   ],
   "description": "A fontselect directive for AngularJS",
