--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "maintainers": [
     "Hannes Diercks <hannes.diercks@jimdo.com>",
     "Lasse Diercks <lasse@jimdo.com>",
-    "Joscha Feth <joscha@feth.com>"
+    "Joscha Feth <joscha@feth.com>",
+    "Xiphe <hannes.diercks@jimdo.com>"
   ],
   "contributors": [
-    "Xiphe <hannes.diercks@jimdo.com>",
     "Christian Meyer <christian.meyer@jimdo.com>",
     "Ole Michaelis <Ole.Michaelis@googlemail.com>",
     "Hauke Stange <hauke@jimdo.com>",
