--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "Hannes Diercks <hannes.diercks@jimdo.com>",
     "Lasse Diercks <lasse@jimdo.com>",
     "Joscha Feth <joscha@feth.com>",
-    "Xiphe <hannes.diercks@jimdo.com>"
+    "Xiphe <hannes.diercks@jimdo.com>",
+    "Karsten Buckstegge <k.buckstegge@gmail.com>"
   ],
   "contributors": [
     "Christian Meyer <christian.meyer@jimdo.com>",
     "Ole Michaelis <Ole.Michaelis@googlemail.com>",
-    "Hauke Stange <hauke@jimdo.com>",
     "Sebastian Eichner <mail@sebastian-eichner.de>",
+    "Hauke Stange <hauke@jimdo.com>",
+    "Tina Umlandt <tina.umlandt@jimdo.com>",
     "HerrBertling <markus277@gmail.com>"
   ],
   "keywords": [
