update bower authors

--- a/bower.json
+++ b/bower.json
@@ -6,10 +6,12 @@
     "Lasse Diercks <lasse@jimdo.com>",
     "Joscha Feth <joscha@feth.com>",
     "Xiphe <hannes.diercks@jimdo.com>",
+    "Karsten Buckstegge <k.buckstegge@gmail.com>",
     "Christian Meyer <christian.meyer@jimdo.com>",
     "Ole Michaelis <Ole.Michaelis@googlemail.com>",
-    "Hauke Stange <hauke@jimdo.com>",
     "Sebastian Eichner <mail@sebastian-eichner.de>",
+    "Hauke Stange <hauke@jimdo.com>",
+    "Tina Umlandt <tina.umlandt@jimdo.com>",
     "HerrBertling <markus277@gmail.com>"
   ],
   "description": "A fontselect directive for AngularJS",
