--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,6 @@ script:
 
 after_success:
   - grunt coveralls
+  - if [ "$TRAVIS_BRANCH" == 'master' ] && [ "$TRAVIS_PULL_REQUEST" == false ]; then
+      npm publish;
+    fi
