--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ script:
 after_success:
   - grunt coveralls
   - if [ "$TRAVIS_BRANCH" == 'master' ] && [ "$TRAVIS_PULL_REQUEST" == false ]; then
-      npm publish;
+      echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > .npmrc && npm publish;
     fi
