--- a/package.json
+++ b/package.json
@@ -36,9 +36,13 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "angular": "1.4.1",
     "bower": "^1.7.7",
     "grunt": "^0.4.5",
     "grunt-angular-toolbox": "^2.1.2",
     "grunt-cli": "^0.1.13"
+  },
+  "peerDependencies": {
+    "angular": "^1.2.25 <= 1.4.1"
   }
 }
